# pocket-haskell

./: CHANGELOG.md  LICENSE.md  README.md  package.yaml  pocket.cabal  stack.yaml
.circleci/: config.yml
.github/workflows/: main.yml
pocket/: README.md
pocket-cli/: package.yaml  pocket-cli.cabal
pocket-cli/app/: Main.hs
pocket/src/Web/Pocket/: Auth.hs  Get.hs  Send.hs
src/Web/: Pocket.hs
src/Web/Pocket/: Add.hs  Auth.hs  Error.hs  Get.hs  Internal.hs  Request.hs  Send.hs
