name: pocket
version: 0.2.0

build-type: Simple
cabal-version: >= 1.21

license: MIT
license-file: LICENSE.md

copyright: 2017 Juan Pedro Villa Isaza
author: Juan Pedro Villa Isaza <jpvillaisaza@gmail.com>
maintainer: Juan Pedro Villa Isaza <jpvillaisaza@gmail.com>

stability: Experimental

homepage: https://github.com/jpvillaisaza/pocket-haskell
bug-reports: https://github.com/jpvillaisaza/pocket-haskell/issues

synopsis: Bindings for the Pocket API
description: Haskell bindings for the Pocket API.

category: Web

tested-with: GHC == 8.0.2

extra-source-files:
  CHANGELOG.md
  README.md


library
  hs-source-dirs:
      src
  exposed-modules:
      Web.Pocket
      Web.Pocket.Add
      Web.Pocket.Auth
      Web.Pocket.Get
      Web.Pocket.Send
  build-depends:
      aeson
    , base >= 4.9 && < 4.14
    , http-conduit
    , text
  default-language:
      Haskell2010
  ghc-options:
      -Wall


source-repository head
  type: git
  location: https://github.com/jpvillaisaza/pocket-haskell
